--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
 }
 P {
     color: white;
+    font-size: 50px;
+    margin-left: 5%;
+    margin-right: 40%;
 }
 .inline-block {
     color: white;
@@ -11,7 +14,7 @@ P {
     vertical-align: top;
 }
 .inline-block ul {
-    padding: 10px;
+    padding: 20px;
 }
 .logo {
     width: 23%;
@@ -36,16 +39,25 @@ ul {
     width: 500px;
     margin: 0 auto;
 }
-footer {
-    background-color: #373738;
-    color: white;
-    padding: 1px;
-}
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+
 footer ul {
     padding: 10px;
     display: inline-block;
-    vertical-align: top;
+    vertical-align: bottom;
 }
 footer li {
     padding: 10px;
+}
+#button1 {
+    width: 500px;
+    color: #EE6055;
+    border-radius: 50%;
+}
+h2 {
+    color: white;
 }
