--- a/style.css
+++ b/style.css
@@ -1,20 +1,44 @@
 body {
-    background-color: black;
+    background-image: url('Central_Park.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
-P {
+h2 {
     color: white;
     font-size: 50px;
     margin-left: 5%;
     margin-right: 40%;
 }
-.inline-block {
+p {
     color: white;
-    display: inline-block;
-    text-align: right;
-    vertical-align: top;
+    font-size: 20px;
+    margin-left: 5%;
+    margin-right: 55%;
 }
-.inline-block ul {
-    padding: 20px;
+.topnav {
+    overflow: hidden;
+    color: white;
+    float: right;
+    margin-right: 5%;
+}
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+#button2 {
+    width: 80px;
+    height: 30px;
+    color: white;
+    background-color: #EE6055;
+    border: none;
+    border-radius: 40px;
+    font-size: 15px;
+    margin-top: 10px;
 }
 .logo {
     width: 23%;
@@ -44,7 +68,7 @@ ul {
     bottom: 0;
     width: 100%;
     text-align: center;
-
+}
 footer ul {
     padding: 10px;
     display: inline-block;
@@ -54,10 +78,12 @@ footer li {
     padding: 10px;
 }
 #button1 {
-    width: 500px;
-    color: #EE6055;
-    border-radius: 50%;
-}
-h2 {
+    width: 120px;
+    height: 40px;
     color: white;
+    background-color: #EE6055;
+    border: none;
+    border-radius: 40px;
+    margin-left: 5%;
+    font-size: 15px;
 }
